--- a/Hi.html
+++ b/Hi.html
@@ -1,5 +1,10 @@
-<html>
-    <body>
-        Hi There
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hi there</title>
+</head>
+<body>
+    
+</body>
 </html>
